--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,57 +3,72 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Register">
+
 
     <TextView
         android:id="@+id/text_Home"
         android:layout_width="260dp"
         android:layout_height="62dp"
-        android:fontFamily="@font/alata"
-        android:text=" What2Watch"
+        android:fontFamily="cursive"
+        android:text="What2Watch"
         android:textColor="#000000"
         android:textSize="40sp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.097" />
+        app:layout_constraintVertical_bias="0.043"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="138dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="text"
         android:text="Username"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
         app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress3"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/text_Home"
-        tools:layout_editor_absoluteY="156dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home"
+        app:layout_constraintVertical_bias="0.482"
+        android:autofillHints=""
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress3"
         android:layout_width="183dp"
         android:layout_height="47dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="156dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home"
+        app:layout_constraintVertical_bias="0.463"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
         android:text="Personal Information"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="340dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/editTextTextPostalAddress"
@@ -62,8 +77,11 @@
         android:ems="10"
         android:inputType="textPostalAddress"
         android:text="Country"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="511dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView8"
@@ -71,8 +89,14 @@
         android:layout_height="wrap_content"
         android:text="Date of Birth"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="390dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
+        app:layout_constraintEnd_toStartOf="@+id/textView9"
+        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home"
+        app:layout_constraintVertical_bias="0.933"
+        tools:ignore="HardcodedText" />
+
 
     <EditText
         android:id="@+id/editTextDate"
@@ -81,8 +105,13 @@
         android:ems="10"
         android:hint="mm/dd/yyyy"
         android:inputType="date"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="430dp" />
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPostalAddress"
+        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.327"
+        tools:ignore="HardcodedText" />
+
 
     <EditText
         android:id="@+id/editTextText2"
@@ -91,8 +120,14 @@
         android:ems="10"
         android:inputType="text"
         android:text="Female"
-        tools:layout_editor_absoluteX="217dp"
-        tools:layout_editor_absoluteY="430dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.839"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.125"
+        tools:ignore="HardcodedText" />
+
 
     <TextView
         android:id="@+id/textView9"
@@ -100,8 +135,14 @@
         android:layout_height="wrap_content"
         android:text="Gender"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="278dp"
-        tools:layout_editor_absoluteY="390dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/text_Home"
+        app:layout_constraintVertical_bias="0.523"
+        tools:ignore="HardcodedText" />
+
 
     <Button
         android:id="@+id/button"
@@ -111,10 +152,12 @@
         app:iconPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.877" />
+        app:layout_constraintVertical_bias="0.765"
+        tools:ignore="HardcodedText" />
+
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -123,10 +166,12 @@
         android:text="I agree to the terms of use and privacy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.581"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.947" />
+        app:layout_constraintVertical_bias="0.885"
+        tools:ignore="HardcodedText" />
+
 
     <EditText
         android:id="@+id/editTextTextPassword2"
@@ -135,8 +180,11 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
         app:layout_constraintStart_toStartOf="@+id/editTextText"
-        tools:layout_editor_absoluteY="253dp" />
+        app:layout_constraintTop_toBottomOf="@+id/text_Home"
+        tools:ignore="HardcodedText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
