--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,22 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    tools:context=".activity_login">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
 
     <TextView
         android:id="@+id/textView"
@@ -30,8 +18,10 @@
         android:textSize="48sp"
         android:textStyle="bold"
         android:typeface="serif"
-        tools:layout_editor_absoluteX="79dp"
-        tools:layout_editor_absoluteY="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText,MissingConstraints" />
 
     <EditText
@@ -43,9 +33,10 @@
         android:hint="email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="114dp" />
+        tools:layout_editor_absoluteY="277dp" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -58,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="218dp" />
+        tools:layout_editor_absoluteY="391dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -68,7 +59,7 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="406dp" />
+        tools:layout_editor_absoluteY="643dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -76,10 +67,10 @@
         android:layout_height="wrap_content"
         android:text="@string/new_user"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.329"
+        app:layout_constraintHorizontal_bias="0.427"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="481dp" />
+        tools:layout_editor_absoluteY="698dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -89,15 +80,16 @@
         android:textColor="#D30404"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.723"
+        app:layout_constraintHorizontal_bias="0.854"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="481dp" />
+        tools:layout_editor_absoluteY="698dp" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="211dp"
         android:layout_height="63dp"
+        android:layout_marginTop="520dp"
         android:text="LOG IN"
         app:iconPadding="24dp"
         app:iconTint="#E91E63"
@@ -112,4 +104,3 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
