--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,10 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_login">
+    android:paddingTop="?attr/actionBarSize">
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
     <TextView
         android:id="@+id/textView"
@@ -18,10 +30,8 @@
         android:textSize="48sp"
         android:textStyle="bold"
         android:typeface="serif"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="79dp"
+        tools:layout_editor_absoluteY="25dp"
         tools:ignore="HardcodedText,MissingConstraints" />
 
     <EditText
@@ -33,10 +43,9 @@
         android:hint="email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="277dp" />
+        tools:layout_editor_absoluteY="114dp" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
@@ -49,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteY="391dp" />
+        tools:layout_editor_absoluteY="218dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -59,7 +68,7 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="643dp" />
+        tools:layout_editor_absoluteY="406dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -67,10 +76,10 @@
         android:layout_height="wrap_content"
         android:text="@string/new_user"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.427"
+        app:layout_constraintHorizontal_bias="0.329"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="698dp" />
+        tools:layout_editor_absoluteY="481dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -80,16 +89,15 @@
         android:textColor="#D30404"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.854"
+        app:layout_constraintHorizontal_bias="0.723"
         app:layout_constraintStart_toStartOf="@+id/textView"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="698dp" />
+        tools:layout_editor_absoluteY="481dp" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="211dp"
         android:layout_height="63dp"
-        android:layout_marginTop="520dp"
         android:text="LOG IN"
         app:iconPadding="24dp"
         app:iconTint="#E91E63"
@@ -104,3 +112,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
